--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "@uiball/loaders": "^1.2.6",
     "airbnb": "^0.0.2",
     "eslint": "8.37.0",
     "eslint-config-airbnb": "^19.0.4",
